--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "AML exercise",
   "main": "index.js",
   "scripts": {
+    "lint-fix": "eslint --fix .",
+    "lint": "eslint .",
     "test": "mocha",
     "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^10.1.0",
     "husky": "^8.0.0",
     "mocha": "^10.2.0"
   }
