--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint-fix": "eslint --fix .",
     "lint": "eslint .",
     "test": "mocha",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test-report": "mocha --reporter json > test-results.json"
   },
   "author": "",
   "license": "ISC",
