--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "test": "mocha",
     "prepare": "husky install",
-    "test-report": "mocha --reporter"
+    "test-report": "mocha --reporter mochawesome"
   },
   "author": "",
   "license": "ISC",
